Getting rid of video tutorials

--- a/app/views/welcome/download.html.haml
+++ b/app/views/welcome/download.html.haml
@@ -20,7 +20,8 @@
         to download this application. This is expected and is - in fact - desirable behaviour.
         And for the scanbot, you can safely click on 'OK' or 'Accept'
   #scanbot-video.left
-    %h4= "Video Tutorial"
+    %h4= "Once downloaded ..."
     %p
-      To see how to use the 'scanbot', please see the video tutorial titled 
-      ! #{link_to 'send scans for grading', howtos_path}. Its quite simple, really
+      The program will be available under <b>Start > All Programs</b> of your <b>Windows</b> machine. 
+      Start the application and it will begin looking for scans. Once found, it will transmit them. 
+      You can leave Scanbot running in the background. It will check periodically for new scans on your machine
