--- a/app/views/welcome/how_it_works.html.haml
+++ b/app/views/welcome/how_it_works.html.haml
@@ -3,22 +3,22 @@
     .step
       = image_tag "1.png"
       .right
-        Teacher picks questions from our database to #{link_to 'create a quiz', howtos_path}
+        Teacher picks questions from our database to create a quiz
     .step
       = image_tag "2.png"
       .right
-        Downloads the one PDF with #{link_to 'testpapers', howtos_path} for all students
+        Downloads the one PDF with worksheets for all students
     .step
       = image_tag "3.png"
-      .right= "Students complete the quiz and return testpapers to teacher"
+      .right= "Students complete the quiz and return worksheets to teacher"
   .half-column.right
     .step
       = image_tag "4.png"
-      .right= "Teacher scans completed testpapers"
+      .right= "Teacher scans completed worksheets. The scans are now in her computer"
     .step
       = image_tag "5.png"
       .right
-        Scans are #{link_to 'transmitted back', howtos_path} to us using our #{link_to 'scanning app', download_path}
+        Our #{link_to 'downloadable utility', download_path} - Scanbot - automatically finds the scans and transmits them to us 
     .step
       = image_tag "6.png"
-      .right= "We judge the quality of responses. Marks are then calculated based on teacher's marking scheme"
+      .right= "We take a first look at the student's work and provide our feedback on it. Numerical marks are auto-calculated" 
