--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
       #public-links
         %ul.no-bullets      
           = main_link :for => :main, :as => 'home', :href => root_path
-          = main_link :for => :videos, :as => 'video tutorials', :href => howtos_path
+          -#= main_link :for => :videos, :as => 'video tutorials', :href => howtos_path
           = main_link :for => :how_it_works, :as => 'how it works', :href => how_it_works_path
           = main_link :for => :download, :as => 'scanbot', :href => download_path
           = main_link :for => :about_us, :as => 'about us', :href => about_us_path
