Added button to flip image in grading console ..
On button click, a request is sent to flip the current scan.
The request is queued => examiner comes back later to grade it

--- a/app/views/toolbox/_colour_picker.html.haml
+++ b/app/views/toolbox/_colour_picker.html.haml
@@ -14,6 +14,8 @@
     .right= "Nice!"
   %div
     %input{ :type => :button, :id => 'undo-btn', :value => 'undo last'} 
+  %div
+    %input{ :type => :button, :id => 'flip-img', :value => 'flip image'} 
 
   %div{ :section => "true" }= "One-click submit"
   #one-click-submit
