Support for adding comments onto scans added ..
Could be buggy at this point .. Expect bug-fixes

--- a/app/views/toolbox/_colour_picker.html.haml
+++ b/app/views/toolbox/_colour_picker.html.haml
@@ -15,6 +15,8 @@
   %div
     %input{ :type => :button, :id => 'undo-btn', :value => 'undo last'} 
   %div
+    %input{ :type => :button, :id => 'add-comment', :value => 'add comment'} 
+  %div
     %input{ :type => :button, :id => 'flip-img', :value => 'flip image'} 
 
   %div{ :section => "true" }= "One-click submit"
