--- a/app/views/toolbox/_grading_canvas.html.haml
+++ b/app/views/toolbox/_grading_canvas.html.haml
@@ -1,5 +1,6 @@
 
 #grading-console
   = render :partial => 'toolbox/colour_picker'
+  = render :partial => 'toolbox/comment'
   -# Can't style the <canvas> using CSS. Hence, setting the width & height here itself
   %canvas#grading-canvas{ :width => 600, :height => 800 }
