--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -1524,6 +1524,18 @@ li {
   display: none ;
 } 
 
+#comment-box {
+  position: fixed ;
+  width: 300px ;
+  height: 50px ;
+  margin-left: 20% ;
+
+  > input[type="text"] {
+    border: 1px solid $orange ;
+    font-size: 10px ;
+  } 
+} 
+
 #colour-picker { 
   background-color: $panel-colour ;
   border-radius: 10px ;
