Added a new button to restore original scan in case annotations gone awry

--- a/app/views/toolbox/_colour_picker.html.haml
+++ b/app/views/toolbox/_colour_picker.html.haml
@@ -28,6 +28,8 @@
     %input{ :type => :button, :id => 'add-comment', :value => 'add comment'} 
   %div
     %input{ :type => :button, :id => 'flip-img', :value => 'flip image'} 
+  %div
+    %input{ :type => :button, :id => 'restore-img', :value => 'restore scan'} 
 
   %div{ :section => "true" }= "One-click submit"
   #one-click-submit
