--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,17 +11,34 @@
     = javascript_include_tag "application", "welcome"
     = csrf_meta_tag
   %body 
-    #viewport
-      #company-logo
-        = image_tag("logo-mit-beta.png", alt: "gradians", id: "gradians_logo")
-      #public-links
-        %ul.no-bullets      
-          = main_link :for => :main, :as => 'home', :href => root_path
-          -#= main_link :for => :videos, :as => 'video tutorials', :href => howtos_path
-          = main_link :for => :how_it_works, :as => 'how it works', :href => how_it_works_path
-          = main_link :for => :download, :as => 'scanbot', :href => download_path
-          = main_link :for => :about_us, :as => 'about us', :href => about_us_path
-          = main_link :for => :try_us, :as => 'free trial', :href => try_us_path
-      #mainstage
-        = yield
-    = yield :footer
+    .container-fluid 
+      .row-fluid
+        .span12
+          .navbar
+            .navbar-inner
+              %a.brand.span4{ :href => "#"}= "Gradians.com"
+              %ul.nav.span8.pull-right
+                %li
+                  %a{ :href => "#"}= "Home"
+                %li
+                  %a{ :href => "#"}= "About Us"
+                %li.dropdown
+                  %a.dropdown-toggle{ :href => "#", "data-toggle" => :dropdown }
+                    Scanbot
+                    %b.caret
+                  %ul.dropdown-menu
+                    %li.nav-header= "Download for .."
+                    %li
+                      %a{ :href => "#"}= "Microsoft Windows"
+                    %li
+                      %a{ :href => "#" }= "Linux"
+                    %li
+                      %a{ :href => "#" }= "Apple Macintosh"
+                %li
+                  #signin-form.pull-right
+                    %form.form-inline.pull-right{ :action => session_path(:account), :method => :post }
+                      %input.input-small{ :type => :text, :name => "account[login]", :placeholder => "Email / Login"}
+                      .input-append
+                        %input.input-small{ :type => :password, :name => "account[password]", :placeholder => "Password" }
+                        %button.btn.btn-primary{ :type => :submit }= "Sign In"
+                        %button#btn-register.btn{ :type => :button }= "Register"
