--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,9 +14,9 @@
     .container-fluid 
       .row-fluid
         .span12
-          .navbar
+          .navbar.navbar-inverse
             .navbar-inner
-              %a.brand.span4{ :href => "#"}= "Gradians.com"
+              %a.brand.span4.orange{ :href => "#"}= "Gradians.com"
               %ul.nav.span8.pull-right
                 %li
                   %a{ :href => "#"}= "Home"
