Minor styling changes in CSS and layout file

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -75,4 +75,6 @@ $panel-colour: lighten(black, 17%) ;
 #logout-link { color: $orange ; }
 #account-ops {
   background: $panel-colour ;
+  float: right ;
+  margin-top: 5px ;
 } 
