--- a/app/views/tasks/_user_account.html.haml
+++ b/app/views/tasks/_user_account.html.haml
@@ -1,7 +1,7 @@
 
 %ul#tasks-on-account.dropdown-menu
   %li
-    %a#logout-link{ :href => logout_path}= "Logout"
+    %a#logout-link{ :default => :true, :href => logout_path}= "Logout"
   %li
     %a#edit-login-info{ :href => '#edit-passwd', 'data-toggle' => :modal }= "Change Password"
   %li
