--- a/app/views/toolbox/_paginator.html.haml
+++ b/app/views/toolbox/_paginator.html.haml
@@ -1,8 +1,8 @@
 
--# url is a variable that comes from the calling view
+-# url & id are variables from the calling view
 
-.pagination
+.pagination.offset1{ :id => id }
   %ul
     - for pg in [*1..8]
       %li
-        = link_to pg, "#{url}?page=#{pg}", :remote => true, :method => :put
+        = link_to pg, "#{url}?page=#{pg}"
