--- a/app/views/tasks/teacher/_quiz_main.html.haml
+++ b/app/views/tasks/teacher/_quiz_main.html.haml
@@ -1,7 +1,7 @@
 
 -# teacher and server come from layout file
 
-%ul#teacher-quiz.dropdown-menu.dropdown-inverse.pull-right
+%ul#teacher-quiz.dropdown-menu.pull-right
   %li.nav-header= "quiz"
   %li
     %a#lnk-new-quiz{ :href => '#'}= "New Quiz"
