--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -24,6 +24,10 @@
     = render :partial => 'toolbox/inline_error'
     = render :partial => 'toolbox/swiss_knife'
 
+    = render :partial => 'tasks/teacher/quiz_filter'
+    = render :partial => 'toolbox/line'
+    = render :partial => 'toolbox/preview'
+
     #flot-chart
 
 !!!5
@@ -64,10 +68,10 @@
       #desktop.row-fluid
         #lp.g-panel.span4
           #lp-quiz-lst
+            = render :partial => 'teachers/quiz-lst'
           #lp-sektion-lst
           #lp-student-lst
         #wp.g-panel.span8
-          #wp-preview
 
     = yield :toolbox
     -#= render :partial => 'accounts/update'
