Finally figured out how to write &lsaquo and &rsaquo is HAML

--- a/app/views/toolbox/_preview.html.haml
+++ b/app/views/toolbox/_preview.html.haml
@@ -1,6 +1,8 @@
 
 #wp-preview.carousel.slide
   .carousel-inner
-  %a.carousel-control.left{ :href => "#", 'data-slide' => :prev }="<"
-  %a.carousel-control.right{ :href => "#", 'data-slide' => :next }=">"
+  %a.carousel-control.left{ :href => "#", 'data-slide' => :prev }
+    \&lsaquo;
+  %a.carousel-control.right{ :href => "#", 'data-slide' => :next }
+    \&rsaquo;
 
