--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -25,6 +25,7 @@
     = render :partial => 'toolbox/swiss_knife'
 
     = render :partial => 'tasks/teacher/quiz_filter'
+    = render :partial => 'tasks/teacher/per-quiz'
     = render :partial => 'toolbox/line'
     = render :partial => 'toolbox/preview'
 
