Centralized and sharpened definition of actions to be done ...
.. when a .one-line or a .two-line is clicked

In particular, a contextual menu cannot open unless the line-item hasnt
been selected first

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -135,17 +135,18 @@ $lightblue: lighten($deep-blue, 23%) ;
     font-weight: 400 ;
   } 
   &:hover {
-    color: $orange ;
     font-weight: 500 ;
   } 
   &.selected {
-    font-weight: 400 ;
-    > .dropdown { > a { color: $orange ; } }
+    > .dropdown { > a { color: white ; } }
+    border-bottom: 4px solid $orange ;
   } 
 
   > .dropdown { 
     font-size: 10px ;
-    > a { color: white ; } 
+    > a { 
+      color: $lightgray ;
+    }
   } 
 } 
 
