Change hrefs of links in contextual menus based on returned JSON ..
New attributes to be set
  1. .dropdown-menu -> data-autoupdate-on -> list of urls
  2. <a> in menu -> data-update-on -> a single url

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -160,3 +160,13 @@ $lightblue: lighten($deep-blue, 23%) ;
     display: inline-block ;
   } 
 } 
+
+.contextual-menu { 
+  &.btn {
+    background: { 
+      color: $deep-blue ;
+      image: none ;
+    } 
+
+  }
+} 
