--- a/app/views/teachers/_quiz-lst.html.haml
+++ b/app/views/teachers/_quiz-lst.html.haml
@@ -10,7 +10,7 @@
           Main 
           %b.caret
         %ul.dropdown-menu.dropdown-inverse#quiz-action-menu{ :role => :menu,
-        'data-autoupdate-on' => 'quiz/preview quizzes/list'}
+        'data-update-on' => 'quiz/preview quizzes/list'}
           %li.nav-header= "Show"
           %li.dropdown-submenu
             %a{ :href => '#', 'data-toggle' => :dropdown }= "By Recency"
